--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
   "name": "forkify",
   "version": "1.0.0",
-  "description": "",
+  "description": "forkify project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open"
   },
-  "author": "",
+  "author": "Jonas Schmedtmann",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.42.0"
+    "@babel/preset-env": "^7.9.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "html-webpack-plugin": "^3.0.7",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.1.1"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
+    "fractional": "^1.0.0",
+    "uniqid": "^4.1.1"
   }
 }
